--- a/style.css
+++ b/style.css
@@ -190,3 +190,23 @@ p {
 .copy-button:hover {
     background-color: #2c7d93;
 }
+
+/* Notification within the duplicate Total CGR Sales section */
+.notification {
+    background-color: #389FBC;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+    margin-top: 10px; /* Adds space between the text and the notification */
+    text-align: center;
+}
+
+.notification.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+
