--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@ h1 {
     font-size: 24px;
 }
 
+h3 {
+    text-align: center;
+    color: #ffffff;
+    margin-bottom: 10px;
+    font-size: 17px;
+}
+
 /* Textarea styles */
 textarea {
     width: calc(100% - 30px);
