--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ h1 {
 
 h3 {
     text-align: center;
+    font-weight:400;
     color: #ffffff;
     margin-bottom: 10px;
-    font-size: 17px;
+    font-size: 16px;
 }
 
 /* Textarea styles */
